<resources>
    <string name="app_name" translatable="false">Brukenthal museum</string>
    <string name="tab1">Museum</string>
    <string name="tab2">Artworks</string>
    <string name="tab3">Rooms</string>
    <string name="tab_artwork_text">Artwork Tab</string>
    <string name="tab_museum_text">Museum Tab</string>
    <string name="tab_rooms_text">Rooms Tab</string>
    <string name="artwork_name_text">Add name for artwork…</string>
    <string name="artwork_description_text">Description</string>
    <string name="artwork_comments_text">Comments</string>
    <string name="image_description">Image</string>
    <string name="delete_instruction">To remove an artwork, please swipe right</string>
    <string name="artwork_type_text">Type</string>
    <string name="artwork_author_text">Author</string>
    <string name="artwork_location_text">Location</string>
    <string name="add_artwork">Add artwork</string>
    <string name="toolbar_image_description">Museum</string>
    <string name="painting">Painting</string>
    <string name="drawing">Drawing</string>
    <string name="name_artwork">Name : Artwork name</string>
    <string name="author_name">Author: Author name</string>
    <string name="lorem_ipsum">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sollicitudin mauris at arcu pellentesque, non aliquet lorem congue. Donec sit amet eros ullamcorper, luctus nulla ac, egestas lacus. Mauris sit amet iaculis nisi.  </string>
    <string name="ceramics">Ceramics</string>
    <string name="measurement_value">100</string>
    <string name="edit_room_header">Edit Optimal Conditions For This Room</string>
    <string name="new_value">New Value</string>
    <string name="edit_artwork">Edit artwork</string>
    <string name="storage">Storage</string>
    <string name="photography">Photo</string>
    <string name="room_a1" translatable="false">A1</string>
    <string name="room_a2" translatable="false">A2</string>
    <string name="room_a3" translatable="false">A3</string>
    <string name="room_b1" translatable="false">B1</string>
    <string name="room_b2" translatable="false">B2</string>
    <string name="room_b3" translatable="false">B3</string>
    <string name="room_b4" translatable="false">B4</string>
    <string name="room_storage">Storage</string>
    <string name="optimal_conditions_title">Set optimal conditions</string>
    <string name="temperature">Temperature</string>
    <string name="temperature_edit_room">Temperature : </string>
    <string name="humidity_edit_room">Humidity : </string>
    <string name="co_edit_room">CO2 :</string>
    <string name="light_edit_room">Light :</string>
    <string name="save_changes">Save Changes</string>
    <string name="artwork">Artwork</string>
    <string name="room">Room</string>
    <string name="backSlash">/</string>
    <string name="login">Login</string>
    <string name="sendVisitors">Send visitors</string>
    <string name="co2">CO2</string>
    <string name="visualize">Visualize</string>
    <string name="light">Light</string>
    <string name="humidity">Humidity</string>
    <string name="min">min.</string>
    <string name="max">max.</string>
    <string name="touch">Touch to write</string>
    <string name="temperature_unit_celsius">°C</string>
    <string name="temperature_unit_fahrenheit">°F</string>
    <string name="light_unit">lx</string>
    <string name="co2_unit">ppm</string>
    <string name="humidity_unit">mg/L</string>
    <string name="position1" translatable="false">1</string>
    <string name="position2" translatable="false">2</string>
    <string name="position3" translatable="false">3</string>
    <string name="position4" translatable="false">4</string>
    <string name="position6" translatable="false">6</string>
    <string name="position8" translatable="false">8</string>
    <string name="position7" translatable="false">7</string>
    <string name="position5" translatable="false">5</string>
    <string name="position9" translatable="false">9</string>
    <string name="action_search">Search</string>
    <string name="action_manage_accounts">Manage accounts</string>
    <string name="action_settings">Settings</string>
    <string name="register_account">Register account</string>
    <string name="cancel">Cancel</string>
    <string name="create">Create</string>
    <string name="hint_email">Email *</string>
    <string name="hint_password">Password *</string>
    <string name="hint_repeat_password">Repeat password *</string>
    <string name="visitors">Visitors</string>
    <string name="no_artwork">No artwork</string>
    <string name="capacity">Capacity :</string>
    <string name="description_room">Description :</string>
    <string name="no_description">No description…</string>
    <string name="edit">Edit</string>
    <string name="artworks">Artworks</string>
    <string name="logo">Logo</string>
    <string name="title">Museum name</string>
    <string name="pref_notification_label">Notifications for artwork deviations</string>
    <string name="pref_notification_sum_off">Turned off</string>
    <string name="pref_notification_sum_on">Turned on</string>
    <string name="pref_notification_key" translatable="false">notification</string>
    <string name="position12">12</string>
    <string name="position11">11</string>
    <string name="position10">10</string>
    <string name="pref_temperature_key" translatable="false">temperature</string>
    <string name="fahrenheit">Fahrenheit</string>
    <string name="celsius">Celsius</string>
    <string name="pref_temperature_label">Temperature unit</string>
    <string name="pref_notification_title_key" translatable="false">notifications_category</string>
    <string name="pref_notification_title_label">Notifications</string>
    <string name="pref_general_title_key" translatable="false">general_category</string>
    <string name="pref_general_title_label">General</string>
    <string name="pref_user_title_key" translatable="false">user_category</string>
    <string name="pref_user_title_label">User</string>
    <string name="pref_user_button_key" translatable="false">user_button</string>
    <string name="pref_user_summary">Tap to manage your account</string>
    <string name="pref_user_title">Manage account</string>
    <string name="exit_back_twice">Please press BACK again to exit</string>
    <string name="museum_content_description">Museum room overview</string>
    <string name="email">Email:</string>
    <string name="change_password">Tap to change password</string>
    <string name="password">Password</string>
    <string name="change_email">Tap to change email</string>
    <string name="user_settings_title">User account</string>
    <string name="change_password_title">Change password</string>
    <string name="temperatureShort">Temp</string>
    <string name="move_artwork">Move artwork</string>


</resources>
