<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <PreferenceCategory
        app:key="@string/pref_notification_title_key"
        app:title="@string/pref_notification_title_label">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/pref_notification_default"
            android:key="@string/pref_notification_key"
            android:summaryOff="@string/pref_notification_sum_off"
            android:summaryOn="@string/pref_notification_sum_on"
            android:title="@string/pref_notification_label"
            app:iconSpaceReserved="false"/>
    </PreferenceCategory>

    <PreferenceCategory
        app:key="@string/pref_general_title_key"
        app:title="@string/pref_general_title_label">
        <SwitchPreferenceCompat
            android:defaultValue="@bool/pref_temperature_unit"
            android:key="@string/pref_temperature_key"
            android:summaryOff="@string/fahrenheit"
            android:summaryOn="@string/celsius"
            android:title="@string/pref_temperature_label"
            app:iconSpaceReserved="false" />
    </PreferenceCategory>

</PreferenceScreen>