<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item android:id="@+id/search"
        android:title="@string/action_search"
        android:icon="@drawable/ic_search"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.widget.SearchView" />
    <item android:id="@+id/manageAccounts"
        android:title="@string/action_manage_accounts"
        android:icon="@drawable/ic_account"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/settings"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="collapseActionView" />
    <item android:id="@+id/visitors"
        android:title="@string/visitors"
        app:showAsAction="collapseActionView" />

</menu>