<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    android:background="@android:drawable/dialog_holo_dark_frame"
    android:orientation="vertical">

        <TextView
            android:id="@+id/text_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:textSize="18sp"
            android:gravity="start"
            android:text="@string/optimal_conditions_title" />
        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:columnCount="6">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/temperature"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/min"/>
            <EditText
                android:id="@+id/min_temp"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:minWidth="30dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/max"/>
            <EditText
                android:id="@+id/max_temp"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/temperature_unit_celsius"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/light"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/min"/>
            <EditText
                android:id="@+id/min_light"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/max"/>
            <EditText
                android:id="@+id/max_light"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:minWidth="30dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/light_unit"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/co2"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/min"/>
            <EditText
                android:id="@+id/min_co2"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/max"/>
            <EditText
                android:id="@+id/max_co2"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/co2_unit"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorAccent"
                android:text="@string/humidity"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/min"/>
            <EditText
                android:id="@+id/min_hum"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="@string/max"/>
            <EditText
                android:id="@+id/max_hum"
                style="@style/EditViewStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:minWidth="30dp"
                android:backgroundTint="@color/white"
                android:inputType="number"
                tools:ignore="LabelFor,UnusedAttribute"
                android:autofillHints="" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:text="@string/humidity_unit"/>
        </GridLayout>
</LinearLayout>