<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.museum.rooms.RoomA2Activity">

    <include
        layout="@layout/toolbar" />

    <ImageView
        android:id="@+id/room_a2_image"
        android:layout_width="411dp"
        android:layout_height="match_parent"
        android:contentDescription="@string/museum_content_description"
        android:layout_marginTop="@dimen/toolbar_height"
        android:layout_gravity="top"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:srcCompat="@drawable/room_a2" />

    <TextView
        android:id="@+id/artwork_place_5"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        android:text="@string/position5"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.345"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.312" />

    <TextView
        android:id="@+id/artwork_place_1"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="end"
        android:text="@string/position1"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.556" />

    <TextView
        android:id="@+id/artwork_place_6"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="end"
        android:text="@string/position6"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.62"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.314" />

    <TextView
        android:id="@+id/artwork_place_2"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="end"
        android:text="@string/position2"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.368"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.556" />

    <TextView
        android:id="@+id/artwork_place_3"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:gravity="end"
        android:text="@string/position3"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.138"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.555" />

    <TextView
        android:id="@+id/artwork_place_4"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="end"
        android:text="@string/position4"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.073"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.441" />

    <TextView
        android:id="@+id/artwork_place_7"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:gravity="start"
        android:text="@string/position7"
        android:textColor="@color/colorPrimary"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.359" />

    <TextView
        android:id="@+id/artwork_place_8"
        android:layout_width="58dp"
        android:layout_height="52dp"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimary"
        android:gravity="start"
        android:text="@string/position8"
        app:layout_constraintBottom_toBottomOf="@+id/room_a2_image"
        app:layout_constraintEnd_toEndOf="@+id/room_a2_image"
        app:layout_constraintHorizontal_bias="0.875"
        app:layout_constraintStart_toStartOf="@+id/room_a2_image"
        app:layout_constraintTop_toTopOf="@+id/room_a2_image"
        app:layout_constraintVertical_bias="0.459" />

    <ProgressBar
        android:id="@+id/progress_bar_roomA2"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        android:foregroundGravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>